--- a/jpcsp/nbproject/project.properties
+++ b/jpcsp/nbproject/project.properties
@@ -1,3 +1,7 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 application.title=Jpcsp
 application.vendor=George
 build.classes.dir=${build.dir}/classes
@@ -22,6 +26,7 @@ debug.test.modulepath=\
 dist.dir=dist
 dist.jar=${dist.dir}/Jpcsp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.Java-jdk1.6.0_10=D:\\Program Files\\Java\\jdk1.6.0_10
 file.reference.jide-oss-2.2.8.01.jar=C:\\Program Files\\Java\\java libs\\jide-oss-2.2.8.01.jar
@@ -39,10 +44,13 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
-javac.source=1.6
-javac.target=1.6
+javac.processorpath=\
+    ${javac.classpath}
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -51,6 +59,7 @@ javac.test.modulepath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -59,6 +68,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=Jpcsp
 jnlp.codebase.type=local
 jnlp.codebase.url=file:/C:/Users/George.MORALIS/Desktop/trunk/dist/
 jnlp.enabled=false
@@ -67,6 +78,7 @@ jnlp.signed=false
 main.class=jpcsp.MainGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
