--- a/pcsp/vsprojects/pcsp/pcsp.vcxproj.filters
+++ b/pcsp/vsprojects/pcsp/pcsp.vcxproj.filters
@@ -1,3 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="Current" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <ItemGroup>
+    <ClCompile Include="..\..\src\main\Cpu.cpp" />
+    <ClCompile Include="..\..\src\main\main.cpp" />
+    <ClCompile Include="..\..\src\main\Memory.cpp" />
+    <ClCompile Include="..\..\src\main\Video.cpp" />
+    <ClCompile Include="..\..\src\main\HLE\pspdisplay.cpp">
+      <Filter>HLE</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\src\main\Cpu.h" />
+    <ClInclude Include="..\..\src\main\Memory.h" />
+    <ClInclude Include="..\..\src\main\PCSPCommon.h" />
+    <ClInclude Include="..\..\src\main\Singleton.h" />
+    <ClInclude Include="..\..\src\main\Video.h" />
+    <ClInclude Include="..\..\src\main\HLE\pspdisplay.h">
+      <Filter>HLE</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="HLE">
+      <UniqueIdentifier>{32d15ab3-2835-4473-b88d-ddde60bfc080}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
 </Project>
