--- a/pcsp/vsprojects/pcsp/pcsp.vcxproj
+++ b/pcsp/vsprojects/pcsp/pcsp.vcxproj
@@ -150,6 +150,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\main\Cpu.cpp" />
+    <ClCompile Include="..\..\src\main\format\DeferredStub.cpp" />
+    <ClCompile Include="..\..\src\main\format\Elf32Header.cpp" />
+    <ClCompile Include="..\..\src\main\format\Elf32Relocate.cpp" />
+    <ClCompile Include="..\..\src\main\format\Elf32StubHeader.cpp" />
     <ClCompile Include="..\..\src\main\HLE\Managers\SceUidManager.cpp" />
     <ClCompile Include="..\..\src\main\HLE\pspdisplay.cpp" />
     <ClCompile Include="..\..\src\main\HLE\pspSysMem.cpp" />
@@ -163,6 +167,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\main\Cpu.h" />
+    <ClInclude Include="..\..\src\main\format\DeferredStub.h" />
+    <ClInclude Include="..\..\src\main\format\Elf32Header.h" />
+    <ClInclude Include="..\..\src\main\format\Elf32Relocate.h" />
+    <ClInclude Include="..\..\src\main\format\Elf32StubHeader.h" />
     <ClInclude Include="..\..\src\main\HLE\Managers\SceUidManager.h" />
     <ClInclude Include="..\..\src\main\HLE\pspdisplay.h" />
     <ClInclude Include="..\..\src\main\HLE\pspSysMem.h" />
