--- a/pcsp/vsprojects/pcsp/pcsp.vcxproj.filters
+++ b/pcsp/vsprojects/pcsp/pcsp.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClCompile Include="..\..\src\main\format\Elf32StubHeader.cpp">
       <Filter>format</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\main\format\Elf32ProgramHeader.cpp">
+      <Filter>format</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\main\Cpu.h" />
@@ -59,6 +62,9 @@
       <Filter>format</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\main\format\Elf32StubHeader.h">
+      <Filter>format</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\main\format\Elf32ProgramHeader.h">
       <Filter>format</Filter>
     </ClInclude>
   </ItemGroup>
