--- a/pcsp/vsprojects/pcsp/pcsp.vcxproj.filters
+++ b/pcsp/vsprojects/pcsp/pcsp.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClCompile Include="..\..\src\main\format\Elf32ProgramHeader.cpp">
       <Filter>format</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\main\format\Elf32SectionHeader.cpp">
+      <Filter>format</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\main\Cpu.h" />
@@ -65,6 +68,9 @@
       <Filter>format</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\main\format\Elf32ProgramHeader.h">
+      <Filter>format</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\main\format\Elf32SectionHeader.h">
       <Filter>format</Filter>
     </ClInclude>
   </ItemGroup>
