--- a/pcsp/vsprojects/pcsp/pcsp.vcxproj
+++ b/pcsp/vsprojects/pcsp/pcsp.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="..\..\src\main\format\Elf32Relocate.cpp" />
     <ClCompile Include="..\..\src\main\format\Elf32SectionHeader.cpp" />
     <ClCompile Include="..\..\src\main\format\Elf32StubHeader.cpp" />
+    <ClCompile Include="..\..\src\main\format\PSPModuleInfo.cpp" />
     <ClCompile Include="..\..\src\main\HLE\Managers\SceUidManager.cpp" />
     <ClCompile Include="..\..\src\main\HLE\pspdisplay.cpp" />
     <ClCompile Include="..\..\src\main\HLE\pspSysMem.cpp" />
@@ -175,6 +176,7 @@
     <ClInclude Include="..\..\src\main\format\Elf32Relocate.h" />
     <ClInclude Include="..\..\src\main\format\Elf32SectionHeader.h" />
     <ClInclude Include="..\..\src\main\format\Elf32StubHeader.h" />
+    <ClInclude Include="..\..\src\main\format\PSPModuleInfo.h" />
     <ClInclude Include="..\..\src\main\HLE\Managers\SceUidManager.h" />
     <ClInclude Include="..\..\src\main\HLE\pspdisplay.h" />
     <ClInclude Include="..\..\src\main\HLE\pspSysMem.h" />
