--- a/pcsp/vsprojects/pcsp/pcsp.vcxproj.filters
+++ b/pcsp/vsprojects/pcsp/pcsp.vcxproj.filters
@@ -38,6 +38,18 @@
     <ClCompile Include="..\..\src\main\format\PSPModuleInfo.cpp">
       <Filter>format</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\main\format\Elf32.cpp">
+      <Filter>format</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\main\format\PSP.cpp">
+      <Filter>format</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\main\format\PSF.cpp">
+      <Filter>format</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\main\format\PBP.cpp">
+      <Filter>format</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\main\Cpu.h" />
@@ -77,6 +89,18 @@
       <Filter>format</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\main\format\PSPModuleInfo.h">
+      <Filter>format</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\main\format\Elf32.h">
+      <Filter>format</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\main\format\PSP.h">
+      <Filter>format</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\main\format\PSF.h">
+      <Filter>format</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\main\format\PBP.h">
       <Filter>format</Filter>
     </ClInclude>
   </ItemGroup>
