--- a/pcsp/vsprojects/pcsp/pcsp.vcxproj
+++ b/pcsp/vsprojects/pcsp/pcsp.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="..\..\src\main\HLE\Managers\SceUidManager.cpp" />
     <ClCompile Include="..\..\src\main\HLE\pspdisplay.cpp" />
     <ClCompile Include="..\..\src\main\HLE\pspSysMem.cpp" />
+    <ClCompile Include="..\..\src\main\HLE\ThreadMan.cpp" />
     <ClCompile Include="..\..\src\main\HLE\Types\SceUid.cpp" />
     <ClCompile Include="..\..\src\main\main.cpp" />
     <ClCompile Include="..\..\src\main\Memory.cpp" />
@@ -200,6 +201,7 @@
     <ClInclude Include="..\..\src\main\HLE\Managers\SceUidManager.h" />
     <ClInclude Include="..\..\src\main\HLE\pspdisplay.h" />
     <ClInclude Include="..\..\src\main\HLE\pspSysMem.h" />
+    <ClInclude Include="..\..\src\main\HLE\ThreadMan.h" />
     <ClInclude Include="..\..\src\main\HLE\Types\SceUid.h" />
     <ClInclude Include="..\..\src\main\Memory.h" />
     <ClInclude Include="..\..\src\main\MemoryMap.h" />
